--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.0",
+    "chart.js": "^3.9.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^3.2.1",
